build/apps/hello-world/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app: simple-deployment
