build/apps/hello-world/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/simple-web-app:3d9b390
        ports:
        - containerPort: 8080
