build/apps/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: trivial-go-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
