build/apps/hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  #namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: route53-issuer-production
    #kubernetes.io/ingress.class: traefik-external
    #kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: traefik-external
  rules:
    - host: ha.anotherlife.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  name: http
  tls:
  - hosts:
    - ha.anotherlife.pl
    #secretName: route53-certificate-anotherlife-pl-tls-production
    secretName: route53-certificate-hello-world-tls-production
