build/apps/hello-world/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  #namespace: dev
  labels:
    app.kubernetes.io/name: hello-world
  annotations:
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web #secure
  routes:
    - kind: Rule
      match: "Host(`ha.anotherlife.pl`) && PathPrefix(`/`)" #&&  PathPrefix(`/dashboard`) || PathPrefix(`/api`)"
      services:
        - kind: Service
          name: hello-world
          #namespace: dev
          port: 80
      # middlewares:
      #   - name: traefik-dashboard-auth  #chain-traefik-dashboard
      #     namespace: traefik
  tls:
    #certResolver: anotherlife-letsencrypt-staging
    secretName: anotherlife-letsencrypt-staging # -staging / -production
    options:
      name: tlsoptions
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
